# GP6

./: CMakeLists.txt  README.md
Source/: ErhcetuaPluginEditor.cpp  ErhcetuaPluginEditor.h  ErhcetuaPluginProcessor.cpp  ErhcetuaPluginProcessor.h  ErhcetuaRhythmEngine.h  Gp6PatchEngine.h  Gp6PluginEditor.cpp  Gp6PluginEditor.h  Gp6PluginProcessor.cpp  Gp6PluginProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RhythmEngine.h
